public_html/components/todolist/components/projects-list/style.css
.todolist-project {
    padding-right: 20px;
    margin-bottom: 10px;
    width: 50%;
    height: 24px;
    background-color: #585858;
    float: left;
}

.todolist-project:hover {
    background-color: #484848;
    cursor: pointer;
}

.todolist-project-traversed {
    background-color: #484848;
}

.todolist-project-name {
    margin-top: 3px;
    margin-left: 10px;
    max-width: 100%;
    height: 20px;
    overflow: hidden;
    float: left;
}

.todolist-project-control {
    margin-top: 2px;
    margin-left: 5px;
    height: 20px;
    width: 20px;
    background-color: #585858;
    cursor: pointer;
    float: left;
}

.todolist-project-control-arrow-up {
    height: 20px;
    width: 20px;
    background-image: url("icons/arrow-up.png");
}

.todolist-project-control-arrow-down {
    height: 20px;
    width: 20px;
    background-image: url("icons/arrow-down.png");
}

.todolist-project-control-edit {
    background-image: url("icons/edit.png");
}

.todolist-project-control-remove {
    background-image: url("icons/cross.png");
}

